[gd_scene load_steps=9 format=3 uid="uid://dreksn2ytdiwd"]

[ext_resource type="Script" path="res://Scripts/Player_Controller.gd" id="1_ogxao"]
[ext_resource type="PackedScene" uid="uid://jfpqks72flrp" path="res://Scenes/Player_A.tscn" id="2_nyq84"]
[ext_resource type="PackedScene" uid="uid://b5os2o6h41pni" path="res://Scenes/Player_B.tscn" id="3_dy2ic"]
[ext_resource type="PackedScene" uid="uid://boh6tyu3r8y5b" path="res://Scenes/Fantasma.tscn" id="3_lsbwl"]
[ext_resource type="Shader" path="res://Resources/Inverted_Ghost.gdshader" id="5_ouuay"]
[ext_resource type="AudioStream" uid="uid://cj1grhwf6777h" path="res://Sound/COLORALPHA 50 Menu Interface SFX/WAV/MI_SFX 36.wav" id="6_55k0d"]
[ext_resource type="Script" path="res://Scripts/SFX.gd" id="7_cpa4p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l7n4o"]
shader = ExtResource("5_ouuay")

[node name="Player_Controller" type="Node2D"]
script = ExtResource("1_ogxao")
SPEED = 500
ACCELERATION = 1300
JUMP_SPEED = 550

[node name="PlayerA" parent="." instance=ExtResource("2_nyq84")]
position = Vector2(52, 53)
scale = Vector2(2.6, 2.6)
collision_layer = 1
collision_mask = 15
floor_max_angle = 0.872665
floor_snap_length = 20.0

[node name="GhostA" parent="." node_paths=PackedStringArray("belongs_to") instance=ExtResource("3_lsbwl")]
visible = false
scale = Vector2(2.6, 2.6)
belongs_to = NodePath("../PlayerA")

[node name="PlayerB" parent="." instance=ExtResource("3_dy2ic")]
position = Vector2(115, 53)
scale = Vector2(2.6, 2.6)
collision_layer = 1
collision_mask = 15
floor_max_angle = 0.872665
floor_snap_length = 20.0

[node name="GhostB" parent="." node_paths=PackedStringArray("belongs_to") instance=ExtResource("3_lsbwl")]
visible = false
material = SubResource("ShaderMaterial_l7n4o")
scale = Vector2(2.6, 2.6)
belongs_to = NodePath("../PlayerB")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_55k0d")
script = ExtResource("7_cpa4p")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
